--- a/resources/lang/bn.json
+++ b/resources/lang/bn.json
@@ -1,5 +1,4 @@
 {
-    "Name":"LLLLLLLLL",
     "Packages":"প্যাকেজ",
     "Package need":"সদস্য অ্যাড",
     "Member": "সদস্য ",
@@ -63,7 +62,47 @@
    "District City":"জেলা শহর",
    "Upazila City":"উপজেলা শহর",
    "Manage Account":"অ্যাকাউন্ট",
-   "Logout":"লগআউট"
+   "Logout":"লগআউট",
+   "Nilam":"নীলম",
+   "Location":"অবস্থান",
+   "Member Ads":"সদস্য বিজ্ঞাপন",
+   "Ad Details":"বিজ্ঞাপনের বিবরণ",
+   "See member's shop details":"সদস্যদের দোকান বিস্তারিত দেখুন",
+   "Negotiable":"আলোচনা সাপেক্ষ",
+   "Ad host provider location":"বিজ্ঞাপন হোস্ট প্রদানকারী অবস্থান",
+   "Division Area":"বিভাগ এলাকা",
+   "District Area":"জেলা এলাকা",
+   "Division City Area":"বিভাগ শহরের এলাকা",
+   "District City Area":"জেলা শহর এলাকা",
+   "Upazila Area":"উপজেলা এলাকা",
+   "Upazila City Area":"উপজেলা শহর এলাকা",
+   "Full Description":"পূর্ণ বিবরণ",
+   "Click to share":"শেয়ার করতে ক্লিক করুন",
+   "See members shop details":"সদস্যদের দোকান বিবরণ দেখুন",
+   "Member science from":"থেকে সদস্য বিজ্ঞান",
+   "Call Seller":"বিক্রেতাকে কল করুন",
+   "Chat with seller":"বিক্রেতার সাথে চ্যাট করুন",
+   "Safety Tips for Buyers":"ক্রেতাদের জন্য নিরাপত্তা টিপস",
+   "Meet seller at a public place":"একটি সর্বজনীন স্থানে বিক্রেতার সাথে দেখা করুন",
+   "Check the item before you buy":"আপনি কেনার আগে আইটেম চেক করুন",
+   "Pay only after collecting the item":"আইটেম সংগ্রহ করার পরেই অর্থ প্রদান করুন",
+   "Price":"দাম",
+   "Condition":"অবস্থা",
+   "Brand":"ব্র্যান্ড",
+   "Current Bid":"বর্তমান দর",
+   "Total Bidded":"মোট বিড",
+   "Bid":"বিড",
+   "View nilam details":"নীলম বিস্তারিত দেখুন",
+   "Make your bid":"আপনার বিড করুন",
+   "Bid Now":"বিড করুন",
+   "Bidding List":"বিডিং তালিকা",
+   "Customer Image":"গ্রাহক ইমেজ",
+   "Customer Name":"ক্রেতার নাম",
+   "Bidded Price":"বিড করা মূল্য",
+   "Bidded_at":"বিড করা হয়েছে",
+   "":"",
+   "":"",
+   "":""
    
 
 
